requirement rows have some decent style now

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -24,7 +24,12 @@ html, body {
 
 a {
   text-transform: uppercase;
+  text-decoration: none;
   color: $midgrey;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 h1, h2, h3, h4, h5 {
