--- a/app/views/opportunities/show.html.erb
+++ b/app/views/opportunities/show.html.erb
@@ -7,14 +7,15 @@
       <div class="oppo-topleft-grid">
         <div class="oppo-topleft-grid-top">
           <div class="oppo-topleft-grid-left">
-            <div class="opportunity-info-row">LED BY
-              <div class="opportunity-info-row-data"><%= @opportunity.user.username %></div>
             </div>
             <div class="opportunity-info-row">CATEGORY
               <div class="opportunity-info-row-data black"><%= @opportunity.category_title %></div>
             </div>
-            <div class="opportunity-info-row"><%= @opportunity.defined ? 'COMPLETION DATE' : 'PLAN BY DATE' %>
+            <div class="opportunity-info-row"><%= @opportunity.defined ? 'MEETING TIME' : 'PLAN BY DATE' %>
               <div class="opportunity-info-row-data">  <%= @opportunity.display_date %></div>
+            </div>
+            <div class="opportunity-info-row">MEETING POINT
+            	<div class="opportunity-info-row-data"> <%= @opportunity.address %></div>
             </div>
           </div>
           <div class="oppo-topleft-grid-right">
