--- a/app/views/pages/_opportunity_row.html.erb
+++ b/app/views/pages/_opportunity_row.html.erb
@@ -28,7 +28,7 @@
       </h5>
       <div class="opportunity-meta">
         <div class="opportunity-row-data">
-          <div class="opportunity-row-data-header"><%= opportunity.defined? ? 'Scheduled Date:' : 'Plan by date:' %> </div>
+          <div class="opportunity-row-data-header"><%= opportunity.defined? ? 'Meeting Time:' : 'Plan by date:' %> </div>
           <% if opportunity.overdue? %>
             <div class="opportunity-row-data-content opportunity-row-overdue">
               <%= opportunity.display_date %> - behind schedule!
@@ -38,6 +38,8 @@
               <%= opportunity.display_date %>
             </div>
           <% end %>
+          <div class="opportunity-row-data-header">Meeting Point: </div>
+          <div class="opportunity-row-data-content"><%= opportunity.address %> </div>
           <div class="opportunity-row-data-header">Category: </div>
           <div class="opportunity-row-data-content"><%= opportunity.category_title %> </div>
           <% if @title_hash[opportunity.id] %>
