--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -5,7 +5,7 @@
 @import "bootstrap";
 @import "tether";
 @import "font-awesome";
-@import url('https://fonts.googleapis.com/css?family=Fjalla+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 $enable-responsive-font-sizes: true;
 
 
