--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
       <div class="col-md-8 mt-md-0 mt-3">
         <!-- Content -->
         <h5 class="text-uppercase">Just Be Human <small>BETA</small></h5>
-        <p>Just Be Human is run by a 501(c)3 non-profit and is principally donation-funded. If you're interested in helping us grow, please check out these links!</p>
+        <p>Just Be Human is run by a 501(c)3 non-profit and is principally donation-funded. We do not run advertisements, nor do we collect information for commercial purposes.</p>
       </div>
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none pb-3">
