remove action text usage

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -11,14 +11,19 @@
   border-bottom: 1px solid $lightgrey;
 }
 
-.trix-content {
+.post-textarea-container {
+  text-align: center;
+  height: 50vh;
+}
+
+.post-content-textarea {
   width: 90vw;
   height: 100%;
   margin-left: auto;
   margin-right: auto;
 
   font-size: 1.3rem;
-
+  border: 1px solid $lightgrey;
 }
 
 .trix-container {
