--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,8 +4,8 @@
   <div class="form-inputs">
     <%= f.input :title, placeholder: "Enter a post title" %>
   </div>
-  <div class="trix-container">
-    <%= f.rich_text_area :content, placeholder: "Write your post here" %>
+  <div class="post-textarea-container">
+    <textarea class="post-content-textarea" placeholder="Write your post here" name="post[content]" id="post_content"></textarea>
   </div>
   <% if params[:opportunity] %>
     <%= f.hidden_field :opportunity_id, :value => params[:opportunity][:id] %>
